--- a/roles/wartest/tasks/main.yml
+++ b/roles/wartest/tasks/main.yml
@@ -9,10 +9,11 @@
       - docker
       - docker-compose
 
-- name: run container
+- name: Run container
   docker_container:
     name: wartest
-    image: "{{ image }}"
-    ports: 8081:8080
+    image: "{{ image }}"
+    ports:
+      - "8081:8080"
     state: started
  
